--- a/dashboard.html
+++ b/dashboard.html
@@ -68,6 +68,22 @@
                 <button onclick="window.location.href='reportes.html'">📄 Ver Reportes</button>
                 <button id="openCalculator">🧮 Abrir Calculadora</button>
             </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Producto</th>
+                        <th>Cantidad</th>
+                        <th>Fecha</th>
+                        <th>Hora</th>
+                        <th>Usuario</th>
+                    </tr>
+                </thead>
+                <tbody id="deleteHistoryBody">
+                    <!-- Aquí se mostrarán los registros -->
+                </tbody>
+            </table>            
+                      
         </section>
     </main>
     
